--- a/mainPage.css
+++ b/mainPage.css
@@ -56,6 +56,10 @@ header {
     gap: 20px;
     padding: 20px;
 }
+#see-more:hover{
+  background-color: black !important; 
+  color: white;
+}
 .news-item {
     width: 300px;
     border: 1px solid #ddd;
